@@ -1,3 +1,8 @@
+2010-04-06  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V00-14-01
+	* some fixes for handling of corrupted FED data
+	
 2010-03-05  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V00-14-00
